update: refactored classes to use config file