@@ -10,18 +10,53 @@ import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
+
+import static com.system.JavaFX.view.ProjectApplication.configData;
 
 public class EventDaoImpl extends DBUtil implements EventDao {
-    private final String getSQL = "SELECT * FROM `event` %s";
+    private final String addSQL, deleteSQL, updateSQL, getSQL, delETRSql, delETASql;
+    private static final String tableName, idHead, titleHead, timeHead, meaningHead, ETRTable, ETATable,
+            astTableName, astIdHead, astNameHead, rocTableName, rocIdHead, rocNameHead;
+
+    static {
+        @SuppressWarnings("unchecked")
+        Map<String, Object> tableConfig = (Map<String, Object>) configData.get("eventTable");
+        @SuppressWarnings("unchecked")
+        Map<String, Object> astTableConfig = (Map<String, Object>) configData.get("astronautTable");
+        @SuppressWarnings("unchecked")
+        Map<String, Object> rocTableConfig = (Map<String, Object>) configData.get("rocketTable");
+        idHead = (String) tableConfig.get("idCol");
+        tableName = (String) tableConfig.get("tableName");
+        titleHead = (String) tableConfig.get("titleCol");
+        timeHead = (String) tableConfig.get("timeCol");
+        meaningHead = (String) tableConfig.get("meaningCol");
+        ETRTable = (String) tableConfig.get("eventToRocketTable");
+        ETATable = (String) tableConfig.get("eventToAstronaut");
+        astTableName = (String) astTableConfig.get("tableName");
+        astIdHead = (String) astTableConfig.get("idCol");
+        astNameHead = (String) astTableConfig.get("nameCol");
+        rocTableName = (String) rocTableConfig.get("tableName");
+        rocIdHead = (String) rocTableConfig.get("idCol");
+        rocNameHead = (String) rocTableConfig.get("nameCol");
+    }
+
+    public EventDaoImpl() {
+        addSQL = baseSqlMap.get("addSql").formatted("%s", "`%s`, `%s`, `%s`", "?, ?, ?").formatted(tableName, titleHead, timeHead, meaningHead);
+        deleteSQL = baseSqlMap.get("deleteSql").formatted(tableName, idHead);
+        updateSQL = baseSqlMap.get("updateSql").formatted("%s", "`%s` = ?, `%s` = ?, `%s` = ?", "%s").formatted(tableName, titleHead, timeHead, meaningHead, idHead);
+        getSQL = baseSqlMap.get("getSql").formatted("%s", tableName ,"%s");
+        delETRSql = baseSqlMap.get("deleteSql").formatted(ETRTable, idHead);
+        delETASql = baseSqlMap.get("deleteSql").formatted(ETATable, idHead);
+    }
 
     @Override
     public boolean add(@NotNull Event event) throws Exception {
         try {
-            String addSQL = "INSERT INTO `event` (`title`, `time`, `mean`) VALUES (?, ?, ?)";
             boolean result = super.executeUpdate(addSQL, event.getTitle(), event.getTime(), event.getMean()) > 0;
-            try (ResultSet resultSet = super.executeQuery("SELECT `eid` FROM `event` WHERE `title` = ?", event.getTitle())) {
+            try (ResultSet resultSet = super.executeQuery(getSQL.formatted("`%s`".formatted(idHead), "WHERE `%s` = ?;".formatted(titleHead)), event.getTitle())) {
                 resultSet.next();
-                event.setId(resultSet.getInt("eid"));
+                event.setId(resultSet.getInt(idHead));
             }
             updateRocket_alias(event);
             updateAstronaut_alias(event);
@@ -33,17 +68,17 @@ public class EventDaoImpl extends DBUtil implements EventDao {
 
     @Override
     public boolean update(@NotNull Event event) throws Exception {
-        ResultSet resultSet = super.executeQuery("SELECT `eid` FROM `event` WHERE `title` = ?", event.getTitle());
+        ResultSet resultSet = super.executeQuery(getSQL.formatted("`%s`".formatted(idHead), "WHERE `%s` = ?;".formatted(titleHead)), event.getTitle());
         resultSet.next();
-        event.setId(resultSet.getInt("eid"));
-        String updateSQL = "UPDATE `event` SET `title` = ?, `time` = ?, `mean` = ? WHERE `eid` = ?";
+        event.setId(resultSet.getInt(idHead));
+
         boolean result = super.executeUpdate(updateSQL, event.getTitle(), event.getTime(), event.getMean(), event.getId()) > 0;
         if (result) {
             // 删除ev_roc表上的相关记录
-            super.executeUpdate("DELETE FROM `ev_roc` WHERE `eid` = ?", event.getId());
+            super.executeUpdate(delETRSql, event.getId());
             updateRocket_alias(event);
             // 删除ev_ast表上的相关记录
-            super.executeUpdate("DELETE FROM `ev_ast` WHERE `eid` = ?", event.getId());
+            super.executeUpdate(delETASql, event.getId());
             updateAstronaut_alias(event);
         }
         return result;
@@ -53,12 +88,12 @@ public class EventDaoImpl extends DBUtil implements EventDao {
         for (var i :
                 event.getAstronauts().split(" ")) {
             try {
-                super.executeUpdate("INSERT INTO `astronaut` (`title`) VALUES (?)", i);
+                super.executeUpdate(baseSqlMap.get("addSql").formatted(astTableName, "%s".formatted(titleHead), "?"), i);
             } catch (SQLException ignored) {
             } finally {
-                var resultSet = super.executeQuery("SELECT `aid` FROM `astronaut` WHERE `title` = ?", i);
+                var resultSet = super.executeQuery("SELECT `%s` FROM `%s` WHERE `%s` = ?".formatted(astIdHead, astTableName, titleHead), i);
                 if (resultSet.next()) {
-                    super.executeUpdate("INSERT INTO `ev_ast` (`eid`, `aid`) VALUES (?, ?)", event.getId(), resultSet.getInt("aid"));
+                    super.executeUpdate("INSERT INTO `%s` (`%s`, `%s`) VALUES (?, ?)".formatted(ETATable, idHead, astIdHead), event.getId(), resultSet.getInt(astIdHead));
                 }
             }
         }
@@ -68,12 +103,12 @@ public class EventDaoImpl extends DBUtil implements EventDao {
         for (var i :
                 event.getRocketName().split(" ")) {
             try {
-                super.executeUpdate("INSERT INTO `rocket` (`rocketName`) VALUES (?)", i);
+                super.executeUpdate("INSERT INTO `%s` (`%s`) VALUES (?)".formatted(rocTableName, rocNameHead), i);
             } catch (SQLException ignored) {
             } finally {
-                var resultSet = super.executeQuery("SELECT `rocketID` FROM `rocket` WHERE `rocketName` = ?", i);
+                var resultSet = super.executeQuery("SELECT `%s` FROM `%s` WHERE `%s` = ?".formatted(rocIdHead, rocTableName, rocNameHead), i);
                 if (resultSet.next()) {
-                    super.executeUpdate("INSERT INTO `ev_roc` (`eid`, `rid`) VALUES (?, ?)", event.getId(), resultSet.getInt("rocketID"));
+                    super.executeUpdate("INSERT INTO `%s` (`%s`, `%s`) VALUES (?, ?)".formatted(ETRTable, idHead, rocIdHead), event.getId(), resultSet.getInt(rocIdHead));
                 }
             }
         }
@@ -81,10 +116,9 @@ public class EventDaoImpl extends DBUtil implements EventDao {
 
     @Override
     public boolean delete(int id) throws Exception {
-        String deleteSQL = "DELETE FROM `event` WHERE `eid` = ?";
         if (super.executeUpdate(deleteSQL, id) > 0) {
-            super.executeUpdate("DELETE FROM `ev_roc` WHERE `eid` = ?", id);
-            super.executeUpdate("DELETE FROM `ev_ast` WHERE `eid` = ?", id);
+            super.executeUpdate(delETRSql, id);
+            super.executeUpdate(delETASql, id);
             return true;
         }
         return false;
@@ -93,8 +127,8 @@ public class EventDaoImpl extends DBUtil implements EventDao {
     @Nullable
     @Override
     public Event get(int id) throws Exception {
-        String sentence = "WHERE `eid` = ?";
-        ResultSet resultSet = super.executeQuery(String.format(getSQL, sentence), id);
+        String sentence = "WHERE `%s` = ?".formatted(idHead);
+        ResultSet resultSet = super.executeQuery(getSQL.formatted(sentence), id);
         if (resultSet.next()) {
             return initEvent(resultSet);
         }
@@ -104,8 +138,8 @@ public class EventDaoImpl extends DBUtil implements EventDao {
     @Nullable
     @Override
     public Event get(String name) throws Exception {
-        String sentence = "WHERE `title` = ?";
-        ResultSet resultSet = super.executeQuery(String.format(getSQL, sentence), name);
+        String sentence = "WHERE `%s` = ?".formatted(titleHead);
+        ResultSet resultSet = super.executeQuery(getSQL.formatted(sentence), name);
         if (resultSet.next()) {
             return initEvent(resultSet);
         }
@@ -115,7 +149,7 @@ public class EventDaoImpl extends DBUtil implements EventDao {
     @Override
     public List<Event> getAll() throws Exception {
         List<Event> events = new ArrayList<>();
-        ResultSet resultSet = super.executeQuery(String.format(getSQL, ""));
+        ResultSet resultSet = super.executeQuery(getSQL.formatted("*", ""));
         while (resultSet.next()) {
             events.add(initEvent(resultSet));
         }
@@ -126,27 +160,27 @@ public class EventDaoImpl extends DBUtil implements EventDao {
     private Event initEvent(@NotNull ResultSet resultSet) throws Exception {
         StringBuffer stringBuffer = new StringBuffer();
         ArrayList<Integer> list = new ArrayList<>();
-        Event event = new Event(resultSet.getInt("eid"), resultSet.getString("title"), resultSet.getString("time"), resultSet.getString("mean"));
-        ResultSet set = super.executeQuery("SELECT `rid` FROM `ev_roc` WHERE `eid` = ?", event.getId());
+        Event event = new Event(resultSet.getInt(idHead), resultSet.getString(titleHead), resultSet.getString(timeHead), resultSet.getString(meaningHead));
+        ResultSet set = super.executeQuery("SELECT `%s` FROM `%s` WHERE `%s` = ?;".formatted(rocIdHead, ETRTable, idHead), event.getId());
         while (set.next()) {
-            list.add(set.getInt("rid"));
+            list.add(set.getInt(rocIdHead));
         }
         for (var i : list) {
-            set = super.executeQuery("SELECT `rocketName` FROM `rocket` WHERE `rocketID` = ?", i);
+            set = super.executeQuery("SELECT `%s` FROM `%s` WHERE `%s` = ?;".formatted(rocNameHead, rocTableName, rocIdHead), i);
             set.next();
-            stringBuffer.append(set.getString("rocketName")).append(" ");
+            stringBuffer.append(set.getString(rocNameHead)).append(" ");
         }
         event.setRocketName(stringBuffer.toString().strip());
         stringBuffer.delete(0, stringBuffer.length());
         list.clear();
-        set = super.executeQuery("SELECT `aid` FROM `ev_ast` WHERE `eid` = ?", event.getId());
+        set = super.executeQuery("SELECT `%s` FROM `%s` WHERE `%s` = ?;".formatted(astIdHead, ETATable, idHead), event.getId());
         while (set.next()) {
-            list.add(set.getInt("aid"));
+            list.add(set.getInt(astIdHead));
         }
         for (var i : list) {
-            set = super.executeQuery("SELECT `name` FROM `astronaut` WHERE `aid` = ?", i);
+            set = super.executeQuery("SELECT `%s` FROM `%s` WHERE `%s` = ?;".formatted(astNameHead, astTableName, astIdHead), i);
             set.next();
-            stringBuffer.append(set.getString("name")).append(" ");
+            stringBuffer.append(set.getString(astNameHead)).append(" ");
         }
         event.setAstronauts(stringBuffer.toString().strip());
         return event;
@@ -154,7 +188,7 @@ public class EventDaoImpl extends DBUtil implements EventDao {
 
     public List<Event> getAll(int id) throws Exception {
         List<Event> events = new ArrayList<>();
-        ResultSet resultSet = super.executeQuery(String.format(getSQL, "WHERE `eid` = ?"), id);
+        ResultSet resultSet = super.executeQuery(getSQL.formatted("WHERE `%s` = ?".formatted(idHead)), id);
         while (resultSet.next()) {
             events.add(initEvent(resultSet));
         }
@@ -163,7 +197,7 @@ public class EventDaoImpl extends DBUtil implements EventDao {
 
     public List<Event> getAll(String name) throws Exception {
         List<Event> events = new ArrayList<>();
-        ResultSet resultSet = super.executeQuery(String.format(getSQL, "WHERE `title` LIKE ?"), String.format("%%%s%%", name));
+        ResultSet resultSet = super.executeQuery(getSQL.formatted("WHERE `%s` LIKE ?".formatted(titleHead)), "%%%s%%".formatted(name));
         while (resultSet.next()) {
             events.add(initEvent(resultSet));
         }
